--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script: ./script/cibuild
 branches:
   only:
   - gh-pages     # test the gh-pages branch
-  - /feature/(.*)/ # test every branch which starts with "pages-"
+  - feature/(.*)/ # test every branch which starts with "pages-"
 
 env:
   global:
