--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 language: ruby
-cache: bundler
+# only run CI-builds on master branch
 branches:
   only:
-  - /feature/(.*)/
   - master
-script:
-  - JEKYLL_ENV=production bundle exec jekyll build --destination site
-deploy:
-  provider: pages
-  local-dir: ./site
-  target-branch: master
-  email: deploy@travis-ci.org
-  name: Deployment Bot
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: true
-  on:
-    branch: master
+rvm:
+- 2.4.1
+# set execution permission on our build script
+before_script:
+ - chmod +x ./script/cibuild
+# path to our build script.
+# Travis will run `bundle install` by default before running our script
+script: ./script/cibuild
+exclude: [vendor]
+sudo: false
